--- a/src/pages/Home/StyleLight.scss
+++ b/src/pages/Home/StyleLight.scss
@@ -3,6 +3,7 @@
 $color-shine: #457dfc;
 $color-main: #699ffc;
 $color-sub: #f0f2f5;
+$color-blockquote: #f0f2f5;
 $color-href: #457dfc;
 $color-h-href: #000000;
 $color-hr: #e8e8e8;
@@ -66,7 +67,7 @@ $color-li: #444444;
   }
   blockquote > p {
     padding: 13px 5px;
-    background: $color-sub;
+    background: $color-blockquote;
   }
 
   p {
