令code留白更优美

--- a/src/pages/Home/StyleLight.scss
+++ b/src/pages/Home/StyleLight.scss
@@ -11,7 +11,6 @@ $color-p: #dddddd;
 $color-p-font: #272727;
 $color-li: #444444;
 
-
 .con {
   * {
     font-family: Roboto, Helvetica Neue, Helvetica, Tahoma, Arial, PingFang SC, Microsoft YaHei;
@@ -76,7 +75,7 @@ $color-li: #444444;
   }
 
   code {
-    padding: 10px;
+    padding: 20px 50px;
   }
 
   hr {
