--- a/src/pages/Home/StyleLight.scss
+++ b/src/pages/Home/StyleLight.scss
@@ -10,6 +10,13 @@ $color-hr: #e8e8e8;
 $color-p: #dddddd;
 $color-p-font: #272727;
 $color-li: #444444;
+$color-copyright: #ff191a;
+
+.copyright {
+  a {
+    color: $color-copyright;
+  }
+}
 
 .con {
   * {
@@ -79,7 +86,8 @@ $color-li: #444444;
   }
 
   code {
-    padding: 16px 7%;
+    padding: 12px 7%;
+    font-size: 90%;
   }
 
   hr {
@@ -88,7 +96,7 @@ $color-li: #444444;
     width: 100%;
     min-width: 100%;
     height: 1px;
-    margin: 24px 0;
+    margin: 18px 0;
     border: 0;
     background: $color-hr;
   }
@@ -99,12 +107,13 @@ $color-li: #444444;
     li {
       list-style: none;
       position: relative;
-      padding: 0.3rem 0 0.3rem 6%;
+      padding: 0.4rem 0 0.3rem 6%;
       margin: 0 0 .5em 10px;
       -webkit-transition: .12s;
       transition: .12s;
       cursor: default;
       color: $color-li;
+      border-bottom: 1px solid $color-hr;
     }
 
     li::before {
