--- a/src/pages/Home/StyleLight.scss
+++ b/src/pages/Home/StyleLight.scss
@@ -88,6 +88,7 @@ $color-copyright: #ff191a;
   code {
     padding: 12px 7%;
     font-size: 90%;
+    background: #f0f8ff;
   }
 
   hr {
@@ -107,13 +108,12 @@ $color-copyright: #ff191a;
     li {
       list-style: none;
       position: relative;
-      padding: 0.4rem 0 0.3rem 6%;
+      padding: 0.3rem 0 0.06rem 6%;
       margin: 0 0 .5em 10px;
       -webkit-transition: .12s;
       transition: .12s;
       cursor: default;
       color: $color-li;
-      border-bottom: 1px solid $color-hr;
     }
 
     li::before {
