--- a/src/pages/Home/StyleLight.scss
+++ b/src/pages/Home/StyleLight.scss
@@ -88,7 +88,7 @@ $color-copyright: #ff191a;
   code {
     padding: 12px 7%;
     font-size: 90%;
-    background: #f0f8ff;
+    background: #f7fbff;
   }
 
   hr {
